--- a/Matematica 1/Modulo 2.tex
+++ b/Matematica 1/Modulo 2.tex
@@ -194,13 +194,13 @@
 	\item a esta matriz ampliada (A I) se le aplica operaciones elementales y si $R_A$ es la identidad entonces donde se ubico I se tendra la inversa $A^{-1}$ de A
 \end{itemize}
 
-\paragraph{Teorema Rouchè y Frobeniun}
+\paragraph{Teorema Rouchè-Frobenius}
 \begin{itemize}
 	\item Un sistema A.x = b es compatible $\Leftrightarrow$ r(A) = r(A$\mid$b')
 \end{itemize}
 \begin{enumerate}
 	\item r(A) = r(A $\mid$ b') = n incognitas compatible con solucion unica DETERMINADA
-	\item r(A) $\leqslant$ r(A$\mid$b') $<$ n incognitas compatible con infinitas soluciones INDETERMINADO
+	\item r(A) = r(A$\mid$b') $<$ n incognitas compatible con infinitas soluciones INDETERMINADO
 	\item r(A) $<$ r(A$\mid$b') sistema INCOMPATIBLE
 \end{enumerate}
 
