correcion sucesiones geometricas

--- a/Matematica 1/Modulo 1.tex
+++ b/Matematica 1/Modulo 1.tex
@@ -212,7 +212,7 @@
 
 \paragraph{Geometrica}
 \begin{description}
-	\item Forma explicita : $a_n = a_1 . r^n$
+	\item Forma explicita : $a_n = a_1 . r^{n-1}$
 	\item Forma por recurrencia : \begin{equation*}
 	\begin{cases}
     	    a_1 = n \\ 
