se modificio configuracion de pagina

--- a/Matematica 1/Modulo 2.tex
+++ b/Matematica 1/Modulo 2.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+\usepackage[a4paper,left=1.5cm,right=1.5cm,top=1.5cm,bottom=1.5cm]{geometry}
 \usepackage{amssymb,amsmath}
 
 \begin{document}
